<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="Home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_icon"
            android:title="Profile" />
    </group>
    <group>
        <item android:title="Settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/settings_icon"
                    android:title="Settings" />
            </menu>
        </item>
    </group>
</menu>