<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:title="search"
        android:icon="@drawable/search_icon"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
</menu>