...
            app:layout_constraintEnd_toEndOf="@+id/subreddit_banner"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/subreddit_banner" />

        <Button
            android:id="@+id/join_button_sub_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/subscribe_button"
            app:layout_constraintBottom_toTopOf="@+id/title_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/subreddit_profile_pic"
...
